# AI_graphical_pattern_scaling

./: .gitignore  CMakeLists.txt  vcpkg.json
GUI/decompositionFrame/lib/: decompositionFrame.h  decompositionFrameEventHandler.h
GUI/decompositionFrame/src/: decompositionFrame.cpp  decompositionFrameEventHandler.cpp
GUI/imageFrame/lib/: imageFrame.h  imageFrameEventHandler.h
GUI/imageFrame/src/: imageFrame.cpp  imageFrameEventHandler.cpp
GUI/mainFrame/lib/: mainFrame.h  mainFrameEventHandlers.h  setup.h
GUI/mainFrame/src/: mainFrame.cpp  mainFrameEventHandlers.cpp  setup.cpp
core/lib/: aiGeneration.h  aiRecognition.h  core.h  imagePanel.h  imageProcessing.h
core/src/: aiGeneration.cpp  aiRecognition.cpp  core.cpp  imagePanel.cpp  imageProcessing.cpp  main.cpp
lib/: core.h
src/: core.cpp  main.cpp
tmp/: TODO.txt
